--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - 127.0.0.1:5001:5000
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
+      - DEBUG=false
       - EMAIL_DOMAIN
       - SECRET_KEY
     depends_on:
